--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <title>Go code imports for solidsystem.no</title>
     <meta charset="utf-8">
+    <meta name="go-import" content="go.solidsystem.no/fletcher4 git https://github.com/solidsystem/fletcher4">
   </head>
   <body>
     <h1>go.solidsystem.no</h1>
     <p>
       This site is just for serving go.solidsystem.no/** import paths.
+    <p>
+      It serves one repository so far:
+    <ul>
+      <li><a href="https://github.com/solidsystem/fletcher4">go.solidsystem.no/fletcher4</a></li>
+    </ul>
   </body>
 </html>
