Fix root page, should not have go-import there.
Since we needed to have go-import on the actual /fletcher4 path, we remove it here, and adjust the text.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Go code imports for solidsystem.no</title>
     <meta charset="utf-8">
-    <meta name="go-import" content="go.solidsystem.no/fletcher4 git https://github.com/solidsystem/fletcher4">
   </head>
   <body>
     <h1>go.solidsystem.no</h1>
@@ -12,7 +11,7 @@
     <p>
       It serves one repository so far:
     <ul>
-      <li><a href="https://github.com/solidsystem/fletcher4">go.solidsystem.no/fletcher4</a></li>
+      <li><a href="/fletcher4">go.solidsystem.no/fletcher4</a></li>
     </ul>
   </body>
 </html>
